tests/assembler/pass/test4.ial
type automatic Foo
{
    field int32 bar;
}
