tests/assembler/fail/test1.ial
type Foo
{
    field global int32 bar;
}
